--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "tailwindcss-template",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-    "vite": "^3.2.3"
-  }
+	"name": "tailwindcss-template",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.19",
+		"prettier": "^2.8.0",
+		"prettier-plugin-tailwindcss": "^0.2.0",
+		"tailwindcss": "^3.2.4",
+		"vite": "^3.2.3"
+	}
 }
