--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --write ./src"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
@@ -16,5 +16,12 @@
 		"prettier-plugin-tailwindcss": "^0.2.0",
 		"tailwindcss": "^3.2.4",
 		"vite": "^3.2.3"
-	}
+	},
+  "prettier": {
+    "useTabs": true,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "printWidth": 100,
+    "plugins": ["prettier-plugin-tailwindcss"]
+  }
 }
