--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"format": "prettier --write ./src"
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
@@ -17,11 +17,13 @@
 		"tailwindcss": "^3.2.4",
 		"vite": "^3.2.3"
 	},
-  "prettier": {
-    "useTabs": true,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "printWidth": 100,
-    "plugins": ["prettier-plugin-tailwindcss"]
-  }
+	"prettier": {
+		"useTabs": true,
+		"singleQuote": true,
+		"trailingComma": "none",
+		"printWidth": 100,
+		"plugins": [
+			"prettier-plugin-tailwindcss"
+		]
+	}
 }
